# Donatikov.net

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  mainwindow.ui
src/core/auth/: AuthManager.cpp  AuthManager.h  User.cpp  User.h
src/core/services/: GameService.cpp  GameService.h  IService.cpp  IService.h  MobileTopUpService.cpp  MobileTopUpService.h  MoneySend.cpp  MoneySend.h  SubscriptionService.cpp  SubscriptionService.h
src/core/wallet/: Transaction.cpp  Transaction.h
src/data/: TransactionRepository.cpp  TransactionRepository.h  UserRepository.cpp  UserRepository.h
src/ui/: aboutuswindow.cpp  aboutuswindow.h  aboutuswindow.ui  dashboardscreen.cpp  dashboardscreen.h  dashboardscreen.ui  login.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newnamewindow.cpp  newnamewindow.h  newnamewindow.ui  newpasswordwindow.cpp  newpasswordwindow.h  newpasswordwindow.ui  notificationscreen.cpp  notificationscreen.h  notificationscreen.ui  profilewindow.cpp  profilewindow.h  profilewindow.ui  sendmoneyscreen.cpp  sendmoneyscreen.h  sendmoneyscreen.ui  servicewindow.cpp  servicewindow.h  servicewindow.ui  subscriptionwindow.cpp  subscriptionwindow.h  subscriptionwindow.ui  topupscreen.cpp  topupscreen.h  topupscreen.ui
